--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 <body>
-
+    <p>this is pages</p>
     <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
