--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">pqpqpqpq
 </fb:login-button>
 
 <div id="status">
