--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 
 
 <body>
-    <p>this is pages</p>
     <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
@@ -137,7 +136,7 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">pqpqpqpq
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login
 </fb:login-button>
 
 <div id="status">
