--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             class="fb-like"
             data-share="true"
             data-width="450"
-            data-show-faces="true">
+            data-show-faces="false">
         </div>
     
     
